# spring-17

./: .gitignore
computer-vision/assignments/0-opencv-and-chroma-keying/: .gitignore  CMakeConfig.h  CMakeConfig.h.in  CMakeLists.txt
computer-vision/assignments/0-opencv-and-chroma-keying/report/: report.tex
computer-vision/assignments/0-opencv-and-chroma-keying/src/: camera_capture_gui.cpp  chroma_keying.cpp  image_video.cpp  video_image.cpp
linear-algebra/: adj.mat  deg.mat  degadj.mat  fig.dot  figf.dot  graphs.py  inc.mat  lap.mat  uw.graph  uwf.graph
optimization-methods/assignments/1/: exercise_2.py
optimization-methods/assignments/2/: Q6-planes.py  Q6.m  Q6.py  Q6strong.m  Q9-a.py  rough.tex
optimization-methods/sandbox/: 1  bala.dot  bala.py  bala_lt.py  branch_and_bound.py  joy.dot  lt.dot  new.dot  out  output.dot  psp.dot
state-in-colonial-india/book-review/src/: main.bcf  main.tex
state-in-colonial-india/course-project/src/: main.tex  sources.bib
state-in-colonial-india/term-papers/book-review/src/: main.tex  sources.bib
state-in-colonial-india/term-papers/mid-1/src/: Makefile  main.tex  sources.bib
state-in-colonial-india/term-papers/mid-2/src/: Makefile  main.tex  police_structure.dot  sources.bib
